lecture_source/backup/docker_k8s/old/924_volume_deploy.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: vol-deploy
  labels:
    app: vol-deploy

spec:
  replicas: 3
  selector:
    matchLabels:
      app: vol-deploy

  template:
    metadata:
      labels:
        app: vol-deploy
    spec:
      containers:
      - name: docterm
        image: nockchun/docterm:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/data"
          name: vol-path
      volumes:
      - name: vol-path
        persistentVolumeClaim:
          claimName: vol-path-01
