lecture_source/backup/docker_k8s/old/913_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: first.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-kubernetes-first
          servicePort: 80
  - host: second.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-kubernetes-second
          servicePort: 80
